aggregate/forward-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: aggregate_cluster
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: aggregate_cluster
    connect_timeout: 0.25s
    cluster_type:
      name: envoy.clusters.aggregate
      typed_config:
        "@type": type.googleapis.com/envoy.config.cluster.aggregate.ClusterConfig
        lb_clusters:
        - priority: 0
          cluster:
            name: proxy1
            connect_timeout: 0.25s
            type: strict_dns
            lb_policy: round_robin
            load_assignment:
              cluster_name: proxy1
              endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: proxy
                        port_value: 80
        - priority: 0
          cluster:
            name: proxy2
            connect_timeout: 0.25s
            type: strict_dns
            lb_policy: round_robin
            load_assignment:
              cluster_name: proxy2
              endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: proxy
                        port_value: 443
            tls_context: {}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
